force-app/main/default/objects/Todoist_Settings__c/Todoist_Settings__c.object-meta.xml
<CustomObject>
    <label>Todoist Settings</label>
    <pluralLabel>Todoist Settings</pluralLabel>
    <description>Stores authentication and connection settings for Todoist integration</description>
    <nameField>
        <type>Text</type>
        <label>Setting Name</label>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject> 