force-app/main/default/objects/Todoist_Settings__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Protected access token for Todoist API authentication</description>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 