force-app/main/default/objects/Todoist_Settings__c/fields/Connected__c.field-meta.xml
<CustomField>
    <fullName>Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the user is currently connected to Todoist</description>
    <label>Connected</label>
    <type>Checkbox</type>
</CustomField> 