force-app/main/default/objects/Todoist_Settings__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <description>Protected refresh token for Todoist API authentication renewal</description>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 