force-app/main/default/objects/Todoist_Settings__c/fields/Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry__c</fullName>
    <description>Expiration datetime for the access token</description>
    <label>Token Expiry</label>
    <type>DateTime</type>
</CustomField> 