force-app/main/default/objects/Todoist_Settings__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Salesforce user associated with these Todoist settings</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Todoist_Settings</relationshipName>
    <type>Lookup</type>
</CustomField> 